force-app/main/default/objects/Hz_Rest_of_NJ_2023__c/Hz_Rest_of_NJ_2023__c.object-meta.xml
<CustomObject>
    <label>Rest of NJ 2023</label>
    <nameField>
        <displayFormat>CMS-{0000}</displayFormat>
        <label>Rest of NJ 2023</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rest of NJ 2023</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>