force-app/main/default/objects/Hz_Rest_of_NJ_2023__c/fields/Hz_Fac_Ind__c.field-meta.xml
<CustomField>
    <fullName>Hz_Fac_Ind__c</fullName>
    <label>Facility Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>