force-app/main/default/objects/Hz_Rest_of_NJ_2023__c/fields/Hz_Non_Par_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hz_Non_Par_Fee__c</fullName>
    <label>Non Par Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>