force-app/main/default/objects/Hz_Rest_of_NJ_2023__c/fields/Hz_Opps_Cap_Ind__c.field-meta.xml
<CustomField>
    <fullName>Hz_Opps_Cap_Ind__c</fullName>
    <label>Opps Cap Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>